--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "firebase": "^7.24.0",
+    "firebase-tools": "^8.14.0",
     "next": "latest",
+    "nodemailer": "^6.4.14",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^6.9.6"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "dotenv": "^8.2.0",
     "typescript": "4.0"
   },
   "license": "MIT"
